2018-01-29  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh: Automatically update keywords in
	ebuild-mode-keywords.el.
	* ebuild-mode-keywords.el: Insert tokens to mark begin and end
	of automatically generated keywords.

2018-01-28  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode-format-html): New command.
	(glep-mode-map): Bind to "C-c C-f".
	(glep-mode-menu): Add to menu.

	* glep-mode.el (glep-mode-insert-skeleton): Add missing
	Content-Type header line.

2018-01-25  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild-mode-insert-skeleton): Flip order of
	DEPEND and RDEPEND. Suggested by Aaron Swenson.

2018-01-12  Ulrich Müller  <ulm@gentoo.org>

	* keyword-generation.sh (OBSOLETE): Cleanup.

2017-12-25  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.41 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

2017-11-05  Ulrich Müller  <ulm@gentoo.org>

	* glep-mode.el (glep-mode): Make sentence-end-double-space local
	in this buffer.

2017-10-29  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.texi (glep-mode): Document that glep-mode does not
	work with XEmacs.

2017-10-28  Ulrich Müller  <ulm@gentoo.org>

	* Version 1.40 released.

	* ebuild-mode-keywords.el (ebuild-mode-keywords-*): Regenerated.

	* glep-mode.el (font-lock-beg, font-lock-end): Define to suppress
	byte-compiler warnings.

	* glep-mode.el (glep-mode-update-last-modified): New function,
	updates the Last-Modified header when saving the file.
	(glep): New customisation group.
	(glep-mode-update-last-modified): New custom variable.
	(glep-mode-last-modified-re): New variable.
	(glep-mode-before-save): New function.
	(glep-mode): Add glep-mode-before-save to write-contents-hook.

2017-10-27  Ulrich Müller  <ulm@gentoo.org>

	* ebuild-mode.el (ebuild): Rename customisation group.
	(ebuild-mode-portdir, ebuild-mode-eapi-list)
	(ebuild-mode-fix-whitespace, ebuild-mode-update-copyright)
	(ebuild-mode-delete-cvs-line): Update accordingly.